welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: not found: type int
  def estAdo(d:int) {
               ^hasTeen:4: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^hasTeen:4: warning: enclosing method estAdo has result type Unit: return value discarded
      return true
      ^hasTeen:5: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    } else return false
                  ^hasTeen:5: warning: enclosing method estAdo has result type Unit: return value discarded
    } else return false
           ^hasTeen:8: error: not found: value compteur
  compteur=0
  ^hasTeen:10: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:12: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:14: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:15: error: not found: value compteur
  if (compteur >= 2) {
      ^